Add forgotten image height and title code a single line

--- a/contribute.html
+++ b/contribute.html
@@ -72,7 +72,7 @@
 					<p>
 						We are asking you to help the DietPi project. DietPi is an open-source product and it is free to use. We are sustained by donations and <b style="color:#0059ff"> even a small one (as little as the price of a cup of coffee)</b> would help the things move forward, covering the costs for hardware (new boards, micro SD cards etc.), web hosting and future development. 
 						<br><br>This allows us to continue working on DietPi, make it better with every new update.
-						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" loading="lazy" width="200">
+						<br><br><img src="images/contribute/coffee.jpg" alt="Coffee" width="200" height="189" loading="lazy">
 						<br><br>In 2020 we made 8 releases and brought 128 improvements and changes, and fixed 119 bugs. We provided new software titles, support new SBCs and brought many optimisations. There are over <a href="https://dietpi.com/survey/" target="_blank" rel="noopener">110000</a> systems running DietPi.
 						<br><b>Enable us to grow in 2021!</b>
 					</p>
@@ -96,10 +96,7 @@
 					<div class="col-md-4"><img src="images/contribute/diagnose.jpg" alt="Bug report" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Create a new bug report / Report a security issue</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Create a new bug report / Report a security issue</h3><span class="show_hide close"></span></div>
 							<p>
 								Creating a bug report helps us to improve. Providing required info, steps to replicate, and expected vs. actual behaviour you give us valuable info to understand the problem.
 								<br><br>Create now a <a href="https://github.com/MichaIng/DietPi/issues/new?template=bug_report.md" target="_blank" rel="noopener">GitHub issue</a>.
@@ -114,11 +111,9 @@
 					<div class="col-md-4"><img src="images/contribute/investigate.jpg" alt="Diagnose" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Investigate issues / Provide help</h3>
-								<span class="show_hide close"></span>
-							</div>
-							<p>Many times the DietPi project needs help on existent items:
+							<div class="project-title clearfix"><h3>Investigate issues / Provide help</h3><span class="show_hide close"></span></div>
+							<p>
+								Many times the DietPi project needs help on existent items:
 								<ul>
 									<li>Run an investigation (e.g. an installation issue on specific software title)</li>
 									<li>Provide a workaround to an existent issue</li>
@@ -140,10 +135,7 @@
 					<div class="col-md-4"><img src="images/contribute/question.jpg" alt="Question" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Answer questions / Provide insights</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Answer questions / Provide insights</h3><span class="show_hide close"></span></div>
 							<p>Start a discussion, ask and answer questions. There are many questions on <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi GitHub</a>, and also on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">Forum</a> for which you may have already the answers, or you could provide valuable insights.</p>
 							<p>Browse <a href="https://github.com/MichaIng/DietPi/issues" target="_blank" rel="noopener">DietPi issues on GitHub</a> or browse different conversation topics on <a href="https://dietpi.com/phpbb" target="_blank" rel="noopener">DietPi Forums</a> and find the ones that interest you the most.</p>
 						</div>
@@ -155,13 +147,11 @@
 					<div class="col-md-4"><img src="images/contribute/test-configurations.jpg" alt="Test" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Test configurations</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Test configurations</h3><span class="show_hide close"></span></div>
 							<p>DietPi supports multiple SBCs or PC / VM configurations. Very similar with investigating the issues, but specific to hardware, we need your help to run tests and specific installations for certain SBC models or PCs</p>
 							<p>It is often the need to check a new installation on a new SBC model, or maybe verify DietPi in connection with a specific driver. Doing such installation provides a big help to the overall project.</p>
-							<p>Examples:
+							<p>
+								Examples:
 								<ul>
 									<li>A driver installation for a specific SBC</li>
 									<li>Testing a performance tweak.</li>
@@ -177,10 +167,7 @@
 					<div class="col-md-4"><img src="images/contribute/improve-website.jpg" alt="Improve website" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Improve DietPi website</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Improve DietPi website</h3><span class="show_hide close"></span></div>
 							<p>Web development is a dynamic and challenging field. Someone with skills in graphics and web design could provide a help to the overall online presence of this open-source project.</p>
 							<p>Have you seen something on the website which could be improved? Do you have web design skills and you would like to help?</p>
 							<p>We welcome your help to further expand the website. Please check on <a href="https://github.com/MichaIng/DietPi-Website" target="_blank" rel="noopener">How to Contribute on DietPi-Website project</a>.</p>
@@ -193,10 +180,7 @@
 					<div class="col-md-4"><img src="images/contribute/improve-docs.jpg" alt="Improve docs" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Expand DietPi Docs</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Expand DietPi Docs</h3><span class="show_hide close"></span></div>
 							<p>This is an ever growing topic. Please join us to update documentation, bringing more examples and details, making the project easy to use and access.</p>
 							<p>Please check <a href="https://github.com/MichaIng/DietPi-Docs" target="_blank" rel="noopener">How to Contribute on DietPi-Docs project</a>.</p>
 						</div>
@@ -208,10 +192,7 @@
 					<div class="col-md-4"><img src="images/contribute/new-features.jpg" alt="Suggest" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>New feature suggestions & Software titles</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>New feature suggestions & Software titles</h3><span class="show_hide close"></span></div>
 							<p>Do you like the project and you would like to see new software titles or new configuration features?</p>
 							<p>
 								Please add your request and ideas using this <a href="https://github.com/MichaIng/DietPi/issues/new/choose" target="_blank" rel="noopener">GitHub form</a>*.
@@ -226,10 +207,7 @@
 					<div class="col-md-4"><img src="images/contribute/expand-code.jpg" alt="Code" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Extend DietPi</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Extend DietPi</h3><span class="show_hide close"></span></div>
 							<p>
 								<b>Would you like to fix a bug or help extending the DietPi project?</b> 
 								<br><br>You can use issue labels to discover issues you could help out with. Either for a specific hardware model: RPi4, ROCK64, ROCK PI S, Odroid C1, Odroid N1 etc. or Debian distribution.
@@ -249,10 +227,7 @@
 					<div class="col-md-4"><img src="images/contribute/be-part-community.jpg" alt="Community" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Use DietPi Forum</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Use DietPi Forum</h3><span class="show_hide close"></span></div>
 							<p>
 								Discuss with community. 
 								<ul> 
@@ -270,10 +245,7 @@
 					<div class="col-md-4"><img src="images/contribute/social-Twitter.jpg" alt="Blog" width="8" height="5" loading="lazy"></div>
 					<div class="col-md-8">
 						<div class="project-description">
-							<div class="project-title clearfix">
-								<h3>Write about DietPi</h3>
-								<span class="show_hide close"></span>
-							</div>
+							<div class="project-title clearfix"><h3>Write about DietPi</h3><span class="show_hide close"></span></div>
 							<p>
 								Sometimes the easiest way to help, it is to share experience. It helps a lot to write about DietPi project, tell others about it.
 								<br>We embed relevant blog posts and YouTube links in the documentation. There is also a dedicated <a href="https://dietpi.com/docs/references/">Reference page</a>
