Add class for mixitup so that id does not need to be misleading

--- a/contribute.html
+++ b/contribute.html
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<!-- Portfolio section start -->
-		<div class="section secondary-section" id="download">
+		<div class="section secondary-section mixitup" id="download">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
