Add class for mixitup to allow removing the misleading id

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<!-- Portfolio section start -->
-		<div class="section secondary-section" id="download">
+		<div class="section secondary-section mixitup" id="download">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
@@ -998,9 +998,7 @@
 								<div><span>Pros:</span>Classic Retro Gaming</div>
 								<div><span>Cons:</span>TBA</div>
 							</div>
-							<p>Tyrian (OpenTyrian) if not the best game in the world, is the best top-down shooter/scroller game ever created.
-OpenTyrian is best experienced by using a mouse and the Enter key to change rear fire mode.
-Its old, retro, and a classic etc, but I doubt you'll to find a recent and similar game that's anywhere close addictive as OpenTyrian.</p>
+							<p>Tyrian (OpenTyrian) if not the best game in the world, is the best top-down shooter/scroller game ever created. OpenTyrian is best experienced by using a mouse and the Enter key to change rear fire mode. It's old, retro, and a classic etc, but I doubt you'll to find a recent and similar game that's anywhere close addictive as OpenTyrian.</p>
 						</div>
 					</div>
 				</div>
@@ -1133,8 +1131,7 @@ Its old, retro, and a classic etc, but I doubt you'll to find a recent and simil
 								<div><span>Pros:</span>Web interface to view and control your RPi camera</div>
 								<div><span>Cons:</span>TBA</div>
 							</div>
-							<p>Got a RPi camera module?
-Want to record paint drying using time lapse, or, start your own neighbourhood watch surveillance system? Want full control of your RPi camera in a web based interface. This is all you need!</p>
+							<p>Got a RPi camera module? Want to record paint drying using time lapse, or, start your own neighbourhood watch surveillance system? Want full control of your RPi camera in a web based interface. This is all you need!</p>
 						</div>
 					</div>
 				</div>
@@ -1229,8 +1226,7 @@ Want to record paint drying using time lapse, or, start your own neighbourhood w
 								<div><span>Pros:</span>Remote network backup system</div>
 								<div><span>Cons:</span>None</div>
 							</div>
-							<p>Open Source client/server backup system, that through a combination of image and file backups accomplishes both data safety and a fast restoration time.
-TLDR: Basically, it allows you to create a complete system backup, using a simple web interface, for systems on your network.</p>
+							<p>Open Source client/server backup system, that through a combination of image and file backups accomplishes both data safety and a fast restoration time. TLDR: Basically, it allows you to create a complete system backup, using a simple web interface, for systems on your network.</p>
 						</div>
 					</div>
 				</div>
@@ -1459,8 +1455,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 								<div><span>Pros:</span>Share the love! (the other internet)</div>
 								<div><span>Cons:</span>Don't share it too much!</div>
 							</div>
-							<p>Turn your device into a WiFi HotSpot/Access Point with Tor routing. All WiFi HotSpot traffic will be routed through the Tor network, for all connected WiFi devices.
-Perfect for users requiring anonymity and privacy.</p>
+							<p>Turn your device into a WiFi HotSpot/Access Point with Tor routing. All WiFi HotSpot traffic will be routed through the Tor network, for all connected WiFi devices. Perfect for users requiring anonymity and privacy.</p>
 						</div>
 					</div>
 				</div>
@@ -1875,16 +1870,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#apache2" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>A well known, used and documented Linux web server
-								</div>
-								<div>
-									<span>Cons:</span>Can be somewhat bulky, if light web traffic is solely expected
-								</div>
+								<div><a href="https://dietpi.com/docs/software/webserver_stack/#apache2" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<br>
+								<div><span>Pros:</span>A well known, used and documented Linux web server</div>
+								<div><span>Cons:</span>Can be somewhat bulky, if light web traffic is solely expected</div>
 							</div>
 							<p>Host your own website!</p>
 							<p>NB: DietPi will automatically install a web server stack if any software requires it. For most users, you should never need to manually install one. By default this is Lighttpd, however, you can change this in the DietPi-Software menu.</p>
@@ -1901,16 +1890,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#nginx" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Good performance and functionality in a lightweight package
-								</div>
-								<div>
-									<span>Cons:</span>Not as light as Lighttpd
-								</div>
+								<div><a href="https://dietpi.com/docs/software/webserver_stack/#nginx" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Good performance and functionality in a lightweight package</div>
+								<div><span>Cons:</span>Not as light as Lighttpd</div>
 							</div>
 							<p>Host your own website! Nginx is the middle ground between performance (Lighttpd) and bulk (Apache2), whilst keeping many features available in Apache2. Ideal for general use, regardless of expected web traffic load.</p>
 							<p>NB: DietPi will automatically install a web server stack if any software requires it. For most users, you should never need to manually install one. By default this is Lighttpd, however, you can change this in the DietPi-Software menu.</p>
@@ -1927,16 +1910,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#lighttpd" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>The lightest web server of the bunch
-								</div>
-								<div>
-									<span>Cons:</span>Lacks multithreading support and popularity of the others
-								</div>
+								<div><a href="https://dietpi.com/docs/software/webserver_stack/#lighttpd" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<br>
+								<div><span>Pros:</span>The lightest web server of the bunch</div>
+								<div><span>Cons:</span>Lacks multithreading support and popularity of the others</div>
 							</div>
 							<p>Host your own website, without breaking the resource bank. Lighttpd is ideal for low expected web traffic, and/or local use.</p>
 							<p>NB: DietPi will automatically install a web server stack if any software requires it. For most users, you should never need to manually install one. By default this is Lighttpd, however, you can change this in the DietPi-Software menu.</p>
@@ -1953,9 +1930,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#phpmyadmin" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
+								<div><a href="https://dietpi.com/docs/software/webserver_stack/#phpmyadmin" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Web interface SQL admin tool for web server installations. </p>
 						</div>
@@ -1971,16 +1946,10 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/system_security/#lets-encrypt" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
-								<div>
-									<br>
-									<span>Pros:</span>Free and automated SSL cert installation for your web server
-								</div>
-								<div>
-									<span>Cons:</span>None
-								</div>
+								<div><a href="https://dietpi.com/docs/software/system_security/#lets-encrypt" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<br>
+								<div><span>Pros:</span>Free and automated SSL cert installation for your web server</div>
+								<div><span>Cons:</span>None</div>
 							</div>
 							<p>A free and automated SSL cert installation for your web server. This will allow you to have https:// (secure) access to your site.</p>
 						</div>
@@ -1996,9 +1965,7 @@ Perfect for users requiring anonymity and privacy.</p>
 								<span class="show_hide close"></span>
 							</div>
 							<div class="project-info">
-								<div>
-									<a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a>
-								</div>
+								<div><a href="https://dietpi.com/docs/software/webserver_stack/#tomcat" target="_blank" rel="noopener"><span>How to Setup / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
 							<p>Tomcat is a Servlet and JSP Server serving Java technologies. In your Java project you can build your WAR (short for <code>Web ARchive</code>) file, and simply drop it in the deploy directory in Tomcat. </p>
 						</div>
@@ -3087,7 +3054,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/wifihotspot_0.jpg" alt="project 68" width="8" height="5" loading="lazy">
 							<i class="more"></i>
 							<h3>WiFi HotSpot</h3>
-							<p></p>
+							<p>Regular WPA WiFi HotSpot</p>
 							<div class="mask"></div>
 						</a>
 					</div>
@@ -3177,7 +3144,7 @@ Perfect for users requiring anonymity and privacy.</p>
 							<img src="images/dietpi-software/blynkserver_0.jpg" alt="project 78" width="8" height="5" loading="lazy">
 							<i class="more"></i>
 							<h3>Blynk Server</h3>
-							<p></p>
+							<p>SBC remote control server</p>
 							<div class="mask"></div>
 						</a>
 					</div>
