Add critical JavaScript inline
This is to show, hide or make transparent elements initially, which are animated when the browser loads JavaScript, i.e. our app.js. Since app.js is otherwise deferred, this would take significantly longer so that e.g. the large single download/software/contribute frames are all shown for certain time before app.js hides them and shows the navigation buttons + tiles instead.

Additionally this uses plain JavaScript, hence does not depend on jQuery element selectors.

--- a/index.html
+++ b/index.html
@@ -1562,5 +1562,12 @@
 		<!-- Scroll up button start -->
 		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
 		<!-- Scroll up button end -->
+		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
+		<script>
+			document.querySelectorAll('div.toggleDiv').forEach(function(e){e.setAttribute("style","display:none");});
+			document.getElementById("downloadinfo").removeAttribute("style");
+			document.getElementById("portfolio-grid").removeAttribute("style");
+			document.querySelectorAll('svg.triangle').forEach(function(e){e.setAttribute("opacity","0");});
+		</script>
 	</body>
 </html>
