Fix section ID and apply navbar highlight
Additionally hide tiles mixing buttons together with tiles, if browser does not load JavaScript, since all contribution elements are then fully expended

--- a/contribute.html
+++ b/contribute.html
@@ -53,14 +53,14 @@
 					<a class="nav-link" href="/#features">Features</a>
 					<a class="nav-link" href="/#download">Download</a>
 					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
-					<a class="nav-link" href="/contribute.html">Contribute</a>
+					<a class="nav-link" href="#contribute">Contribute</a>
 					<a class="nav-link" href="/#testimonials">Testimonials</a>
 				</div>
 				<!-- End main navigation -->
 			</div>
 		</nav>
 		<!-- Portfolio section start -->
-		<div class="section secondary-section mixitup" id="download">
+		<div class="section secondary-section mixitup" id="contribute">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
@@ -260,7 +260,7 @@
 					</div>
 				</div>
 				<!-- END details for portfolio -->
-				<div id="portfolio-grid" class="row">
+				<div id="portfolio-grid" class="row" style="display:none">
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail show_hide" rel="#bugreport">
