Fix section ID and hide tiles when no JavaScript is loaded

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<!-- Portfolio section start -->
-		<div class="section secondary-section mixitup" id="download">
+		<div class="section secondary-section mixitup" id="software">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<div class="title">
@@ -2396,7 +2396,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 					</div>
 				</div>
 				<!-- END details for portfolio -->
-				<div id="portfolio-grid" class="row">
+				<div id="portfolio-grid" class="row" style="display:none">
 					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Desktops">
 						<a href="#softwareinfo" class="thumbnail show_hide" rel="#slidingdiv1">
