Remove now obsolete ID from scrollup button

--- a/contribute.html
+++ b/contribute.html
@@ -391,7 +391,7 @@
 		</div>
 		<!-- Footer section end -->
 		<!-- Scroll up button start -->
-		<a id="downloadinfo" class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
+		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
 		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
