--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -3483,7 +3483,7 @@ Oldschool: Think Napster, but for buying and selling stuff using your Bitcoins <
 		</div>
 		<!-- Footer section end -->
 		<!-- Scroll up button start -->
-		<a id="downloadinfo" class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
+		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
 		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
