Remove obsolete "home" link and attribute

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -3,7 +3,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<link rel="home" href="https://dietpi.com/">
 		<link rel="canonical" href="https://dietpi.com/dietpi-software.html">
 		<title>DietPi-Software - Lightweight justice for your SBC!</title>
 		<meta name="description" content="Optimised | Simplified | For everyone - Easy to install and run optimised software for your SBC - Raspberry Pi, Odroid, PINE64 etc.!">
@@ -49,7 +48,7 @@
 				<button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse"><svg viewBox="0 0 12 12"><path d="M1 1h10M1 6h10M1 11h10"/></svg></button>
 				<!-- Main navigation -->
 				<div class="navbar-nav navbar-collapse collapse">
-					<a class="nav-link" rel="home" href="/">Home</a>
+					<a class="nav-link" href="/">Home</a>
 					<a class="nav-link" href="/#features">Features</a>
 					<a class="nav-link" href="/#download">Download</a>
 					<a class="nav-link" href="/#gettingstarted">Getting Started</a>
