Make RPi 64-bit image stable and align CPU info

--- a/index.html
+++ b/index.html
@@ -245,10 +245,7 @@
 								<div><span>RAM:</span>256 MiB RPi1 - 8 GiB RPi4</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Buster.7z"><span>32-bit image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
-								<div>
-									<a href="https://dietpi.com/downloads/images/testing/DietPi_RPi-ARMv8-Buster.7z"><span>64-bit beta image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Kodi and Chromium are not supported with this image yet!
-								</div>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Buster.7z"><span>64-bit image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div>
 									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Buster_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image installs and boots into <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener" style="text-decoration-line:underline;">Amiberry</a> automatically on first boot.
@@ -271,7 +268,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Amlogic 1.5 GHz quad-core</div>
+								<div><span>CPU:</span>Amlogic S805 1.5 GHz | 4 cores | ARMv7</div>
 								<div><span>RAM:</span>1 GiB DDR3</div>
 								<div>
 									<span>Known issues:</span>No HDMI output, serial console only<br>
@@ -329,7 +326,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>A64 1.2 GHz | 4 cores | ARMv8</div>
+								<div><span>CPU:</span>Allwinner A64 1.2 GHz | 4 cores | ARMv8</div>
 								<div><span>RAM:</span>512 MiB - 2 GiB DDR3</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<br>
@@ -450,7 +447,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>RK3399 2 GHz/1.5 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 2 GHz/1.5 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB DDR3 1866 MHz (dual channel)</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>eMMC socket, 2 SATA connectors</div>
@@ -470,7 +467,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>A64 1.1 GHz | 4 cores | ARMv8</div>
+								<div><span>CPU:</span>Allwinner A64 1.1 GHz | 4 cores | ARMv8</div>
 								<div><span>RAM:</span>2 GiB DDR3</div>
 								<div><span>NET:</span>WiFi</div>
 								<div><span>Storage:</span>eMMC</div>
@@ -509,7 +506,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>S922X 1.8 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Amlogic S922X 1.8 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>4 GiB DDR4 1320 MHz</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>eMMC socket</div>
@@ -565,7 +562,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
+								<div><span>CPU:</span>Rockchip RK3399 1.8 GHz/1.4 GHz | 6 cores | ARMv8</div>
 								<div><span>RAM:</span>1 GiB - 4 GiB LPDDR4@3200 MiB/s</div>
 								<div><span>NET:</span>Gbit Ethernet</div>
 								<div><span>Storage:</span>eMMC socket</div>
