--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Start slide -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7 has been released!</h2>
-					<h4>Essential upgrade to be in sync with latest platform updates</h4>
-					<p>DietPi v7 brings more joy enabling Steam on ARM via Box86, and Docker Compose to manage multi-container apps. As well a lightweight MJPEG camera streamer has been added. Checkout the latest DietPi update now!</p>
-					<a href="https://dietpi.com/docs/release-notes/#february-2021-version-70" class="da-link" target="_blank" rel="noopener">See what's new</a>
+					<h2>DietPi v7.1 has been released!</h2>
+					<h4>Simplified software selection + Enhanced DietPi Tools</h4>
+					<p>DietPi v7.1 brings a single software list with over 190 software options! New software: IPFS Nodes, Common UNIX Printing System (CUPS), and more in programming (Go language, and an excellent IDE: VSCodium). Plus major updates & new DietPi tools !</p>
+					<a href="https://dietpi.com/docs/release-notes/#april-2021-version-71" class="da-link" target="_blank" rel="noopener">See what's new</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
