--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Start slide -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v7.1 has been released!</h2>
-					<h4>Simplified software selection + Enhanced DietPi Tools</h4>
-					<p>DietPi v7.1 brings a single software list with over 190 software options! New software: IPFS Nodes, Common UNIX Printing System (CUPS), and more in programming (Go language, and an excellent IDE: VSCodium). Plus major updates & new DietPi tools !</p>
-					<a href="https://dietpi.com/docs/release-notes/#april-2021-version-71" class="da-link" target="_blank" rel="noopener">See what's new</a>
+					<h2>DietPi v7.2 Open Beta</h2>
+					<h4>Please help testing and hardening the upcoming release</h4>
+					<p>A new DietPi version is in the starting blocks and we need your help to test the new features and give it the final touches. You can find all required information via the link below.</p>
+					<a href="https://github.com/MichaIng/DietPi/issues/4409" class="da-link" target="_blank" rel="noopener">All infos</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
