--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<h2>DietPi v7.2 Open Beta</h2>
 					<h4>Please help testing and hardening the upcoming release</h4>
 					<p>A new DietPi version is in the starting blocks and we need your help to test the new features and give it the final touches. You can find all required information via the link below.</p>
-					<a href="https://github.com/MichaIng/DietPi/issues/4409" class="da-link" target="_blank" rel="noopener">All infos</a>
+					<a href="https://github.com/MichaIng/DietPi/issues/4409" class="da-link" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- End slide -->
